--- a/playbooks/roles/info_common/tasks/main.yaml
+++ b/playbooks/roles/info_common/tasks/main.yaml
@@ -1,6 +1,10 @@
 ---
 - name: Main
   module_defaults:
+    ansible.builtin.blockinfile:
+      append_newline: true
+      create: true
+      mode: "0644"
     ansible.builtin.lineinfile:
       create: true
       firstmatch: true
