--- a/playbooks/roles/info_common/tasks/_log_issue.yaml
+++ b/playbooks/roles/info_common/tasks/_log_issue.yaml
@@ -26,7 +26,7 @@
       delegate_to: localhost
       throttle: 1
       ansible.builtin.blockinfile:
-        block: "{{ _details.stdout }}"
+        block: "{{ '    <--- filed at ' + now(utc=true,fmt='%Y-%m-%d %H:%M:%S') + ' --->\n' + _details.stdout }}"
         path: "{{ tmp_dir }}/all_issue-details.log"
         marker: "# {mark} {{ _marker }}"
 
