--- a/playbooks/roles/setup_common/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-src.yaml
@@ -85,7 +85,13 @@
           yes '' | make localmodconfig >/dev/null
 
           cat <<EOF >>.config
-          # Debian / generic
+
+          # generic
+
+          CONFIG_GCC_PLUGINS=y
+          CONFIG_GCC_PLUGIN_LATENT_ENTROPY=y
+          CONFIG_GCC_PLUGIN_STACKLEAK=y
+          CONFIG_GCC_PLUGIN_RANDSTRUCT=y
 
           CONFIG_LOCALVERSION=""
           CONFIG_LOCALVERSION_AUTO=y
