--- a/playbooks/roles/info_common/tasks/main.yaml
+++ b/playbooks/roles/info_common/tasks/main.yaml
@@ -35,6 +35,11 @@
       tags:
         - log-issue
 
+    - name: Log nginx error
+      ansible.builtin.import_tasks: log-error-nginx.yaml
+      tags:
+        - log-error-nginx
+
     - name: Log system
       ansible.builtin.import_tasks: log-system.yaml
       tags:
