--- a/playbooks/info.yaml
+++ b/playbooks/info.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Info Misc
-  hosts: "!snowflake:!tor"
+  hosts: all
   roles:
     - role: info_setup
     - role: info_common
@@ -8,13 +8,9 @@
 - name: Info Snowflake
   hosts: snowflake
   roles:
-    - role: info_setup
-    - role: info_common
     - role: info_snowflake
 
 - name: Info Tor
   hosts: tor
   roles:
-    - role: info_setup
-    - role: info_common
     - role: info_tor
