--- a/playbooks/roles/info_snowflake/tasks/connections.yaml
+++ b/playbooks/roles/info_snowflake/tasks/connections.yaml
@@ -6,11 +6,11 @@
 
 - name: Sum connections
   changed_when: false
-  failed_when: _result.stderr
+  failed_when: false
   ansible.builtin.shell:
     cmd: |-
       lines=$(
-        journalctl -u snowflake-proxy --since "{{ log_connections }}" -g ', there were .* connections' --quiet --reverse |
+        journalctl -u snowflake-proxy --since "{{ log_connections_seconds_ago }} second ago" -g ', there were .* connections' --quiet --reverse |
         awk '{ print $14 }' |
         xargs |
         tr ' ' '+'
@@ -18,12 +18,12 @@
       sum=$(( lines ))
 
       if [[ $sum -gt 0 ]]; then
-        echo $sum
+        echo "$sum"
       else
-        if [[ {{ ansible_facts.uptime_seconds }} -lt 3600 ]]; then
+        if [[ {{ ansible_facts.uptime_seconds }} -lt {{ log_connections_seconds_ago }} ]]; then
           echo "n/a"
         else
-          echo "0"
+          echo "$sum"
         fi
       fi
     executable: /bin/bash
@@ -32,7 +32,9 @@
 - name: File connections
   delegate_to: localhost
   throttle: 1
+  when: _result.stderr
   ansible.builtin.lineinfile:
     line: "{{ inventory_hostname }} {{ _result.stdout }}"
     path: "{{ tmp_dir }}/snowflake_connections"
     regex: "^{{ inventory_hostname }} "
+    state: "{{ _result.stderr | bool | ternary('absent', 'present') }}"
