--- a/playbooks/roles/setup_tor/tasks/validate.yaml
+++ b/playbooks/roles/setup_tor/tasks/validate.yaml
@@ -25,3 +25,10 @@
     quiet: true
     that:
       - "nickname | length >= 1 and nickname | length <= 19"
+
+- name: Validate additional_ports
+  when: additional_ports
+  ansible.builtin.assert:
+    quiet: true
+    that:
+      - "additional_ports | unique | length == additional_ports | length"
