fix Ubuntu setup

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -111,6 +111,7 @@
         - upgrade
 
     - name: Distribution kernel
+      when: ansible_facts.distribution in ('Debian')
       ansible.builtin.import_tasks: kernel-dist.yaml
       tags:
         - kernel
