--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -6,7 +6,7 @@ kernel_debian_backports: true
 kernel_debian_cloud: true
 
 kernel_git_repo_url: "https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git"
-kernel_git_version: "" # e.g. HEAD or "v6.7.3"
+kernel_git_version: master # e.g. "v6.7.3"
 kernel_git_patches: []
 
 # kernel build
