--- a/playbooks/roles/setup_snowflake/defaults/main.yaml
+++ b/playbooks/roles/setup_snowflake/defaults/main.yaml
@@ -1,6 +1,6 @@
 ---
 snowflake_build_from_source: true
-snowflake_git_version: HEAD
+snowflake_git_version: main
 snowflake_patches: []
 snowflake_prune_git_repo: false
 
