--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,10 +16,10 @@ remote_user = root
 
 ssh_args = -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=yes -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
 
-# switch back: ANSIBLE_DISPLAY_OK_HOSTS=false
+# overwrite: ANSIBLE_DISPLAY_OK_HOSTS=false
 display_ok_hosts = true
 
-# switch back: ANSIBLE_DISPLAY_SKIPPED_HOSTS=true
+# overwrite: ANSIBLE_DISPLAY_SKIPPED_HOSTS=true
 display_skipped_hosts = false
 
 # only stats
