--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -117,7 +117,7 @@
         - kernel-dist
 
     - name: Self-compiled kernel
-      when: kernel_git_version
+      when: kernel_build_from_source
       ansible.builtin.import_tasks: kernel-src.yaml
       tags:
         - kernel-src
