fix firewall info task for a fresh new system

--- a/playbooks/roles/info_common/tasks/firewall.yaml
+++ b/playbooks/roles/info_common/tasks/firewall.yaml
@@ -20,6 +20,7 @@
 
 - name: Get ct counter
   changed_when: false
+  failed_when: false
   ansible.builtin.command:
     cmd: conntrack -C
   register: _result
@@ -31,3 +32,4 @@
     line: "{{ inventory_hostname }} {{ _result.stdout }}"
     path: "{{ tmp_dir }}/all_firewall_ct_counter"
     regex: "^{{ inventory_hostname }} "
+    state: "{{ _result.stderr | bool | ternary('absent', 'present') }}"
