move systemd config to config task

--- a/playbooks/roles/setup_snowflake/tasks/config.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/config.yaml
@@ -35,3 +35,9 @@
     use_ssh_args: true
     verify_host: true
   notify: Restart Snowflake
+
+- name: Add systemd unit
+  ansible.builtin.template:
+    src: snowflake-proxy.service.j2
+    dest: /etc/systemd/system/snowflake-proxy.service
+  notify: Restart Snowflake
