--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -20,7 +20,7 @@
   ansible.builtin.git:
     repo: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/snowflake.git
     dest: /root/snowflake
-    version: "{{ snowflake_git_version | default('HEAD') }}"
+    version: "{{ snowflake_git_version }}"
     force: true
     depth: 1
     single_branch: true
