--- a/playbooks/roles/setup_tor/tasks/lyrebird.yaml
+++ b/playbooks/roles/setup_tor/tasks/lyrebird.yaml
@@ -11,7 +11,7 @@
   ansible.builtin.git:
     repo: https://gitlab.torproject.org/tpo/anti-censorship/pluggable-transports/lyrebird
     dest: /root/lyrebird
-    version: "{{ lyrebird_git_version | default('HEAD') }}"
+    version: "{{ lyrebird_git_version }}"
     force: true
     depth: 1
     single_branch: true
