--- a/playbooks/roles/info_common/defaults/main.yaml
+++ b/playbooks/roles/info_common/defaults/main.yaml
@@ -3,12 +3,12 @@ log_lines: 20
 
 log_system_since: 1 day ago
 
-log_issue_fname_prefix: all
+issue_fname_prefix: common
 
 nginx_loglevel: error
 
-artefact_path: ""
-artefact_pattern: []
-artefact_size: -1g
-artefact_tmpdir: "{{ tmp_dir }}"
+artefact_paths: []
+artefact_patterns: []
 artefact_script: ""
+artefact_size: -1g
+artefact_tmpdir: "{{ tmp_dir }}/artefact"
