--- a/playbooks/roles/info_common/tasks/log-system.yaml
+++ b/playbooks/roles/info_common/tasks/log-system.yaml
@@ -12,6 +12,6 @@
   register: _result
 
 - name: Findings in system log
-  when: _result.stdout_lines
+  when: _result.stdout
   ansible.builtin.debug:
     var: _result.stdout_lines
