--- a/playbooks/roles/info_common/tasks/main.yaml
+++ b/playbooks/roles/info_common/tasks/main.yaml
@@ -31,6 +31,7 @@
         - log-unattended
 
     - name: Artefact
+      when: artefact_paths
       ansible.builtin.import_tasks: artefact.yaml
       tags:
         - artefact
