--- a/playbooks/roles/info_tor/tasks/heartbeat.yaml
+++ b/playbooks/roles/info_tor/tasks/heartbeat.yaml
@@ -8,6 +8,6 @@
   register: _result
 
 - name: Results of Heartbeat
-  when: _result.stdout_lines
+  when: _result.stdout
   ansible.builtin.debug:
     var: _result.stdout_lines
