--- a/playbooks/roles/info_tor/tasks/log-notice.yaml
+++ b/playbooks/roles/info_tor/tasks/log-notice.yaml
@@ -20,7 +20,7 @@
   register: _result
 
 - name: Results of notice log
-  when: _result.stdout_lines
+  when: _result.stdout
   ansible.builtin.debug:
     var: _result.stdout_lines
 
