--- a/playbooks/roles/info_tor/tasks/log-warn.yaml
+++ b/playbooks/roles/info_tor/tasks/log-warn.yaml
@@ -13,6 +13,6 @@
   register: _result
 
 - name: Results of warn log
-  when: _result.stdout_lines
+  when: _result.stdout
   ansible.builtin.debug:
     var: _result.stdout_lines
