--- a/playbooks/roles/info_common/tasks/minicoredumper.yaml
+++ b/playbooks/roles/info_common/tasks/minicoredumper.yaml
@@ -8,6 +8,6 @@
   register: _result
 
 - name: Results of Minicoredumper
-  when: _result.stdout_lines
+  when: _result.stdout
   ansible.builtin.debug:
     var: _result.stdout_lines
