--- a/playbooks/roles/info_common/defaults/main.yaml
+++ b/playbooks/roles/info_common/defaults/main.yaml
@@ -7,8 +7,11 @@ issue_fname_prefix: common
 
 nginx_loglevel: error
 
-artefact_paths: []
-artefact_patterns: []
+artefact_paths:
+  - /tmp
+artefact_patterns:
+  - "*"
 artefact_script: ""
-artefact_size: -1g
+artefact_size: "200k"
 artefact_tmpdir: "{{ tmp_dir }}/artefact"
+artefact_cleanup: false
