--- a/playbooks/roles/setup_tor/tasks/lyrebird.yaml
+++ b/playbooks/roles/setup_tor/tasks/lyrebird.yaml
@@ -27,8 +27,11 @@
   retries: 3
   changed_when: _lyrebird_patched.stdout_lines is search('patching file ')
   ansible.builtin.shell:
-    cmd: >-
-      curl -s {{ item }} -o /root/lyrebird.patch && patch -p 1 </root/lyrebird.patch
+    cmd: |-
+      set -euf
+
+      curl -s {{ item }} -o /root/lyrebird.patch
+      patch -p 1 </root/lyrebird.patch
     chdir: /root/lyrebird
   loop: "{{ lyrebird_patches }}"
   register: _lyrebird_patched
