micro-optimization for proxy log parsing

--- a/playbooks/roles/info_snowflake/tasks/log-nat.yaml
+++ b/playbooks/roles/info_snowflake/tasks/log-nat.yaml
@@ -3,10 +3,9 @@
   changed_when: false
   ansible.builtin.shell:
     cmd: |-
-      journalctl -u snowflake-proxy -g "NAT" --quiet |
+      journalctl -u snowflake-proxy --since "{{ log_proxy_since }}" -g "NAT type:" --quiet |
         tail -n 1 |
-        grep -o "NAT type:.*" |
-        cut -f 3- -d ' '
+        cut -f 10 -d ' '
   register: _result
 
 - name: File NAT type
