--- a/playbooks/roles/setup_common/tasks/update-apt.yaml
+++ b/playbooks/roles/setup_common/tasks/update-apt.yaml
@@ -1,40 +1,9 @@
 ---
-- name: Ensure Debian repos for Hetzner VPS are HTTPs
-  when: ansible_facts.system_vendor == 'Hetzner' and ansible_facts.distribution in ('Debian')
-  block:
-    - name: Remove HTTP repos
-      retries: 3
-      ansible.builtin.apt_repository:
-        repo: "deb http://{{ item }}"
-        state: absent
-      with_items:
-        - "mirror.hetzner.com/debian/packages {{ ansible_facts.distribution_release }} main contrib non-free-firmware"
-        - "mirror.hetzner.com/debian/packages {{ ansible_facts.distribution_release }}-backports main contrib non-free-firmware"
-        - "mirror.hetzner.com/debian/packages {{ ansible_facts.distribution_release }}-updates main contrib non-free-firmware"
-        - "mirror.hetzner.com/debian/security {{ ansible_facts.distribution_release }}-security main contrib non-free"
-        - "deb.debian.org/debian {{ ansible_facts.distribution_release }} main contrib non-free-firmware"
-        - "deb.debian.org/debian {{ ansible_facts.distribution_release }}-backports main"
-        - "deb.debian.org/debian {{ ansible_facts.distribution_release }}-updates main contrib non-free-firmware"
-        - "security.debian.org/debian-security {{ ansible_facts.distribution_release }}-security main contrib non-free-firmware"
-
-    - name: Add HTTPs repos
-      ansible.builtin.apt_repository:
-        repo: "deb https://{{ item }} main contrib non-free-firmware"
-      with_items:
-        - "mirror.hetzner.com/debian/packages {{ ansible_facts.distribution_release }}"
-        - "mirror.hetzner.com/debian/packages {{ ansible_facts.distribution_release }}-backports"
-        - "mirror.hetzner.com/debian/packages {{ ansible_facts.distribution_release }}-updates"
-        - "mirror.hetzner.com/debian/security {{ ansible_facts.distribution_release }}-security"
-        - "deb.debian.org/debian {{ ansible_facts.distribution_release }}"
-        - "deb.debian.org/debian {{ ansible_facts.distribution_release }}-backports"
-        - "deb.debian.org/debian {{ ansible_facts.distribution_release }}-updates"
-        - "security.debian.org/debian-security {{ ansible_facts.distribution_release }}-security"
-
-- name: Apt update
+- name: Update cache
   ansible.builtin.apt:
     update_cache: true
 
-- name: De-install openipmi at IONOS
+- name: De-install freeipmi at IONOS
   when: ansible_facts.system_vendor == 'QEMU'
   ansible.builtin.apt:
     name:
