--- a/playbooks/roles/setup_autoupdate/tasks/main.yaml
+++ b/playbooks/roles/setup_autoupdate/tasks/main.yaml
@@ -30,7 +30,7 @@
       mode: "0644"
   block:
     - name: Configure auto update
-      when: auto_update | bool and ansible_facts.distribution in ('Debian', 'Ubuntu')
+      when: ansible_facts.distribution in ('Debian', 'Ubuntu')
       ansible.builtin.import_tasks: auto-update.yaml
       tags:
         - auto-update
